--- a/landpage.css
+++ b/landpage.css
@@ -155,6 +155,12 @@ button {
   border: none;
   color: white;
   font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #67c3a8;
+  transition: 0.2s ease;
 }
 
 /**** Mobile mode styles ****/
